orders-service/orders-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-app
  template:
    metadata:
      labels:
        app: orders-app
    spec:
      containers:
        - name: orders
          image: tramak/orders-service:latest
          ports:
            - name: orders
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: shop-service-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
      - name: shop-service-persistent-storage
        persistentVolumeClaim:
          claimName: shop-service-pv-claim
