orders-service/orders-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders-app
  type: NodePort  
  ports:
    - port: 8080
      targetPort: 8080
