orders-service/orders-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orders-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: orders.browser
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: orders-service
              port: 
                number: 8080
